[gd_scene load_steps=111 format=3 uid="uid://d3446qnhg3cxc"]

[ext_resource type="Texture2D" uid="uid://xr6kkdp3xpmn" path="res://assets/enemies_and_player/Shark/Attack.png" id="1_oul6g"]
[ext_resource type="Script" uid="uid://cwni6wiqkv24j" path="res://GDscripts/player.gd" id="1_qjkh3"]
[ext_resource type="Texture2D" uid="uid://fj3upfn1r8fw" path="res://assets/booster/WaterBall - Startup and Infinite.png" id="2_boad6"]
[ext_resource type="Texture2D" uid="uid://v45x7yxcv5g5" path="res://assets/enemies_and_player/Shark/Death.png" id="2_yw30f"]
[ext_resource type="Texture2D" uid="uid://du7gjckhsu4b1" path="res://assets/enemies_and_player/Shark/Idle.png" id="3_qjkh3"]
[ext_resource type="Texture2D" uid="uid://ba5xixlha1ifs" path="res://assets/booster/WaterBall - Impact.png" id="3_rgyib"]
[ext_resource type="Texture2D" uid="uid://b1i2upl04kdig" path="res://assets/enemies_and_player/Shark/Walk.png" id="4_g6k8r"]
[ext_resource type="Texture2D" uid="uid://cxijqhdl4ycrh" path="res://assets/spike/Water Spike 01 - SpriteSheet.png" id="4_rgyib"]
[ext_resource type="Texture2D" uid="uid://yfoclrycbe07" path="res://assets/spike/Water StartUp 1 SpriteSheet(30fps).png" id="5_hg6s5"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kqu6x"]
height = 46.0

[sub_resource type="AtlasTexture" id="AtlasTexture_bjvpn"]
atlas = ExtResource("2_boad6")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7qer"]
atlas = ExtResource("2_boad6")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4c7l"]
atlas = ExtResource("2_boad6")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_knn7v"]
atlas = ExtResource("2_boad6")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pqkx"]
atlas = ExtResource("2_boad6")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uw77l"]
atlas = ExtResource("2_boad6")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rptt4"]
atlas = ExtResource("2_boad6")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7pn3"]
atlas = ExtResource("2_boad6")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8hi5"]
atlas = ExtResource("2_boad6")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2uvqg"]
atlas = ExtResource("2_boad6")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1s1yo"]
atlas = ExtResource("2_boad6")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ejfk"]
atlas = ExtResource("2_boad6")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jd2rm"]
atlas = ExtResource("2_boad6")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q28gw"]
atlas = ExtResource("2_boad6")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ge24q"]
atlas = ExtResource("2_boad6")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnw6m"]
atlas = ExtResource("2_boad6")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1so5t"]
atlas = ExtResource("3_rgyib")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_55jnj"]
atlas = ExtResource("3_rgyib")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dx5ib"]
atlas = ExtResource("3_rgyib")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2xo5"]
atlas = ExtResource("3_rgyib")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_art4l"]
atlas = ExtResource("3_rgyib")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjxoa"]
atlas = ExtResource("3_rgyib")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gswnw"]
atlas = ExtResource("3_rgyib")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcnuv"]
atlas = ExtResource("3_rgyib")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j55il"]
atlas = ExtResource("3_rgyib")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjies"]
atlas = ExtResource("3_rgyib")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmwog"]
atlas = ExtResource("3_rgyib")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pxes"]
atlas = ExtResource("3_rgyib")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmu53"]
atlas = ExtResource("3_rgyib")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7j2h"]
atlas = ExtResource("3_rgyib")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0b8q"]
atlas = ExtResource("3_rgyib")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfgyi"]
atlas = ExtResource("3_rgyib")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_237xx"]
atlas = ExtResource("2_boad6")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpyo2"]
atlas = ExtResource("2_boad6")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7crtr"]
atlas = ExtResource("2_boad6")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgvch"]
atlas = ExtResource("2_boad6")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1u5o"]
atlas = ExtResource("2_boad6")
region = Rect2(256, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_3dxkp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjvpn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7qer")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4c7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_knn7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pqkx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uw77l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rptt4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7pn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8hi5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2uvqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1s1yo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ejfk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jd2rm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q28gw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ge24q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnw6m")
}],
"loop": true,
"name": &"boosted",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1so5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55jnj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dx5ib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2xo5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_art4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjxoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gswnw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcnuv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j55il")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjies")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmwog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pxes")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmu53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7j2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0b8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfgyi")
}],
"loop": false,
"name": &"booster_end",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_237xx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpyo2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7crtr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgvch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1u5o")
}],
"loop": false,
"name": &"booster_start_up",
"speed": 30.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_3dxkp"]
atlas = ExtResource("4_rgyib")
region = Rect2(0, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wior"]
atlas = ExtResource("4_rgyib")
region = Rect2(64, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5tca"]
atlas = ExtResource("4_rgyib")
region = Rect2(128, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbx34"]
atlas = ExtResource("4_rgyib")
region = Rect2(192, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3g0c"]
atlas = ExtResource("4_rgyib")
region = Rect2(256, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_35wys"]
atlas = ExtResource("4_rgyib")
region = Rect2(0, 80, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjwc4"]
atlas = ExtResource("4_rgyib")
region = Rect2(64, 80, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_or4qq"]
atlas = ExtResource("4_rgyib")
region = Rect2(128, 80, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hggc2"]
atlas = ExtResource("4_rgyib")
region = Rect2(192, 80, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2j0d"]
atlas = ExtResource("4_rgyib")
region = Rect2(256, 80, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7l6ig"]
atlas = ExtResource("4_rgyib")
region = Rect2(0, 160, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3r50"]
atlas = ExtResource("4_rgyib")
region = Rect2(64, 160, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_utr5e"]
atlas = ExtResource("4_rgyib")
region = Rect2(128, 160, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_kewli"]
atlas = ExtResource("4_rgyib")
region = Rect2(192, 160, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_do7qw"]
atlas = ExtResource("4_rgyib")
region = Rect2(256, 160, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2h6tc"]
atlas = ExtResource("4_rgyib")
region = Rect2(0, 240, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rogd"]
atlas = ExtResource("4_rgyib")
region = Rect2(64, 240, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_48p26"]
atlas = ExtResource("4_rgyib")
region = Rect2(128, 240, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_anp34"]
atlas = ExtResource("5_hg6s5")
region = Rect2(0, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdjat"]
atlas = ExtResource("5_hg6s5")
region = Rect2(0, 16, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j420s"]
atlas = ExtResource("5_hg6s5")
region = Rect2(0, 32, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kcq4v"]
atlas = ExtResource("5_hg6s5")
region = Rect2(0, 48, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qavcc"]
atlas = ExtResource("5_hg6s5")
region = Rect2(0, 64, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bd26m"]
atlas = ExtResource("5_hg6s5")
region = Rect2(0, 80, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lufic"]
atlas = ExtResource("5_hg6s5")
region = Rect2(0, 96, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxclr"]
atlas = ExtResource("5_hg6s5")
region = Rect2(0, 112, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_onxu2"]
atlas = ExtResource("5_hg6s5")
region = Rect2(0, 128, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gci7n"]
atlas = ExtResource("5_hg6s5")
region = Rect2(0, 144, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcwf7"]
atlas = ExtResource("5_hg6s5")
region = Rect2(0, 160, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_20bc7"]
atlas = ExtResource("5_hg6s5")
region = Rect2(0, 176, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfgxe"]
atlas = ExtResource("5_hg6s5")
region = Rect2(0, 192, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yg0n1"]
atlas = ExtResource("5_hg6s5")
region = Rect2(0, 208, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjt2w"]
atlas = ExtResource("5_hg6s5")
region = Rect2(0, 224, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2lfai"]
atlas = ExtResource("5_hg6s5")
region = Rect2(0, 240, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3o0i"]
atlas = ExtResource("5_hg6s5")
region = Rect2(0, 256, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgo6y"]
atlas = ExtResource("5_hg6s5")
region = Rect2(0, 272, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qm6yy"]
atlas = ExtResource("5_hg6s5")
region = Rect2(0, 288, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcmgo"]
atlas = ExtResource("5_hg6s5")
region = Rect2(0, 304, 64, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_48p26"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dxkp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wior")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5tca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbx34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3g0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35wys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjwc4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_or4qq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hggc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2j0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7l6ig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3r50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utr5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kewli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_do7qw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2h6tc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rogd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48p26")
}],
"loop": false,
"name": &"spike",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_anp34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdjat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j420s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kcq4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qavcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bd26m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lufic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxclr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_onxu2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gci7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcwf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20bc7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfgxe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yg0n1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjt2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2lfai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3o0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgo6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qm6yy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcmgo")
}],
"loop": true,
"name": &"spike_start_up",
"speed": 30.0
}]

[sub_resource type="Gradient" id="Gradient_yw30f"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qjkh3"]
gradient = SubResource("Gradient_yw30f")

[sub_resource type="AtlasTexture" id="AtlasTexture_rkbax"]
atlas = ExtResource("1_oul6g")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1dw6"]
atlas = ExtResource("1_oul6g")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yw30f"]
atlas = ExtResource("1_oul6g")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjkh3"]
atlas = ExtResource("1_oul6g")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6k8r"]
atlas = ExtResource("1_oul6g")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_boad6"]
atlas = ExtResource("1_oul6g")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgyib"]
atlas = ExtResource("2_yw30f")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hg6s5"]
atlas = ExtResource("2_yw30f")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8t03j"]
atlas = ExtResource("2_yw30f")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ieo8"]
atlas = ExtResource("2_yw30f")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebec5"]
atlas = ExtResource("2_yw30f")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yllr7"]
atlas = ExtResource("2_yw30f")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kb6p2"]
atlas = ExtResource("3_qjkh3")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wodsf"]
atlas = ExtResource("3_qjkh3")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_32hag"]
atlas = ExtResource("3_qjkh3")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqiix"]
atlas = ExtResource("3_qjkh3")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7oew"]
atlas = ExtResource("4_g6k8r")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c35mf"]
atlas = ExtResource("4_g6k8r")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_65viv"]
atlas = ExtResource("4_g6k8r")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7c3f"]
atlas = ExtResource("4_g6k8r")
region = Rect2(144, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_oul6g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkbax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1dw6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yw30f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjkh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6k8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_boad6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkbax")
}],
"loop": false,
"name": &"sharkAttack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgyib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hg6s5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8t03j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ieo8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebec5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yllr7")
}],
"loop": true,
"name": &"sharkDeath",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kb6p2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wodsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32hag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqiix")
}],
"loop": true,
"name": &"sharkIdle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7oew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c35mf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65viv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7c3f")
}],
"loop": true,
"name": &"sharkWalk",
"speed": 10.0
}]

[node name="Player" type="Area2D"]
script = ExtResource("1_qjkh3")

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(-3, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_kqu6x")

[node name="BoosterFever" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_3dxkp")
animation = &"boosted"
frame_progress = 0.623115

[node name="Spike" type="AnimatedSprite2D" parent="."]
position = Vector2(29, -43)
sprite_frames = SubResource("SpriteFrames_48p26")
animation = &"spike_start_up"
autoplay = "spike_start_up"
frame_progress = 0.697677

[node name="Mask" type="Sprite2D" parent="."]
clip_children = 1
rotation = 1.5708
texture = SubResource("GradientTexture2D_qjkh3")
offset = Vector2(-35, 0)

[node name="Shark" type="AnimatedSprite2D" parent="Mask"]
position = Vector2(-1, 0)
rotation = -1.5708
sprite_frames = SubResource("SpriteFrames_oul6g")
animation = &"sharkWalk"
autoplay = "sharkWalk"

[node name="Timer" type="Node" parent="."]

[node name="JumpTimer" type="Timer" parent="Timer"]
one_shot = true

[node name="JumpCD" type="Timer" parent="Timer"]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer/JumpTimer" to="." method="_on_jump_timer_timeout"]
